--- a/style.css
+++ b/style.css
@@ -193,7 +193,8 @@ body {
 #main-bg {
   position: fixed;
   top: 0;
-  left: 20%;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: -1;
   opacity: 0.2;
   max-width: 100%;
